--- a/pantun-min.html
+++ b/pantun-min.html
@@ -16,7 +16,7 @@
                 <nav><ul>
                     <li><a href="/category/alu-aluan.html">alu-aluan</a></li>
                     <li><a href="/category/moh-belajar.html">moh belajar</a></li>
-                    <li class="active"><a href="/category/syair-jo-pantun.html">syair jo pantun</a></li>
+                    <li class="active"><a href="/category/sair-jo-pantun.html">sair jo pantun</a></li>
                     <li><a href="/category/tajamahan-carito.html">tajamahan carito</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -37,7 +37,7 @@
         <address class="vcard author">
                 By                         <a class="url fn" href="/author/rancak.html">rancak</a>
         </address>
-<p>In <a href="/category/syair-jo-pantun.html">syair jo pantun</a>.</p>
+<p>In <a href="/category/sair-jo-pantun.html">sair jo pantun</a>.</p>
 <p>tags: <a href="/tag/baso-minang.html">baso minang</a> </p>
 </footer><!-- /.post-info -->      <div class="section" id="pantun">
 <h2>Pantun</h2>
