--- a/archives.html
+++ b/archives.html
@@ -16,7 +16,7 @@
                 <nav><ul>
                     <li><a href="/category/alu-aluan.html">alu-aluan</a></li>
                     <li><a href="/category/moh-belajar.html">moh belajar</a></li>
-                    <li><a href="/category/syair-jo-pantun.html">syair jo pantun</a></li>
+                    <li><a href="/category/sair-jo-pantun.html">sair jo pantun</a></li>
                     <li><a href="/category/tajamahan-carito.html">tajamahan carito</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -24,14 +24,14 @@
 <h1>Archives for Baso jo Budi</h1>
 
 <dl>
+    <dt>Sel 15 Mac 2016</dt>
+    <dd><a href="/mula-ms.html">Selamat datang!</a></dd>
     <dt>Isn 14 Mac 2016</dt>
     <dd><a href="/pantun-min.html">Pantun Minang</a></dd>
     <dt>Kha 10 Mac 2016</dt>
     <dd><a href="/cara-min.html">Caro baraja</a></dd>
     <dt>Kha 10 Mac 2016</dt>
     <dd><a href="/bohemia.html">A Scandal in Bohemia</a></dd>
-    <dt>Kha 03 Mac 2016</dt>
-    <dd><a href="/mula-ms.html">Selamat datang!</a></dd>
     <dt>Kha 04 Mac 2010</dt>
     <dd><a href="/duel.html">The Duel</a></dd>
 </dl>
