--- a/categories.html
+++ b/categories.html
@@ -16,14 +16,14 @@
                 <nav><ul>
                     <li><a href="/category/alu-aluan.html">alu-aluan</a></li>
                     <li><a href="/category/moh-belajar.html">moh belajar</a></li>
-                    <li><a href="/category/syair-jo-pantun.html">syair jo pantun</a></li>
+                    <li><a href="/category/sair-jo-pantun.html">sair jo pantun</a></li>
                     <li><a href="/category/tajamahan-carito.html">tajamahan carito</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <ul>
     <li><a href="/category/alu-aluan.html">alu-aluan</a></li>
     <li><a href="/category/moh-belajar.html">moh belajar</a></li>
-    <li><a href="/category/syair-jo-pantun.html">syair jo pantun</a></li>
+    <li><a href="/category/sair-jo-pantun.html">sair jo pantun</a></li>
     <li><a href="/category/tajamahan-carito.html">tajamahan carito</a></li>
 </ul>
         <section id="extras" class="body">
