--- a/archives.html
+++ b/archives.html
@@ -18,14 +18,17 @@
                     <li><a href="/category/moh-belajar.html">moh belajar</a></li>
                     <li><a href="/category/sair-jo-pantun.html">sair jo pantun</a></li>
                     <li><a href="/category/tajamahan-carito.html">tajamahan carito</a></li>
+                    <li><a href="/category/tokpisin.html">tokpisin</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
 <h1>Archives for Baso jo Budi</h1>
 
 <dl>
-    <dt>Sel 15 Mac 2016</dt>
+    <dt>Rab 16 Mac 2016</dt>
     <dd><a href="/mula-ms.html">Selamat datang!</a></dd>
+    <dt>Rab 16 Mac 2016</dt>
+    <dd><a href="/wantok-ms.html">Tokpisin (Tok Pisin)</a></dd>
     <dt>Isn 14 Mac 2016</dt>
     <dd><a href="/pantun-min.html">Pantun Minang</a></dd>
     <dt>Kha 10 Mac 2016</dt>
