--- a/authors.html
+++ b/authors.html
@@ -18,13 +18,14 @@
                     <li><a href="/category/moh-belajar.html">moh belajar</a></li>
                     <li><a href="/category/sair-jo-pantun.html">sair jo pantun</a></li>
                     <li><a href="/category/tajamahan-carito.html">tajamahan carito</a></li>
+                    <li><a href="/category/tokpisin.html">tokpisin</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Authors on Baso jo Budi</h1>
     <ul>
-        <li><a href="/author/rancak.html">rancak</a> (5)</li>
+        <li><a href="/author/rancak.html">rancak</a> (6)</li>
     </ul>
 </section>
 
