--- a/categories.html
+++ b/categories.html
@@ -18,6 +18,7 @@
                     <li><a href="/category/moh-belajar.html">moh belajar</a></li>
                     <li><a href="/category/sair-jo-pantun.html">sair jo pantun</a></li>
                     <li><a href="/category/tajamahan-carito.html">tajamahan carito</a></li>
+                    <li><a href="/category/tokpisin.html">tokpisin</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <ul>
@@ -25,6 +26,7 @@
     <li><a href="/category/moh-belajar.html">moh belajar</a></li>
     <li><a href="/category/sair-jo-pantun.html">sair jo pantun</a></li>
     <li><a href="/category/tajamahan-carito.html">tajamahan carito</a></li>
+    <li><a href="/category/tokpisin.html">tokpisin</a></li>
 </ul>
         <section id="extras" class="body">
                 <div class="blogroll">
