--- a/tags.html
+++ b/tags.html
@@ -18,6 +18,7 @@
                     <li><a href="/category/moh-belajar.html">moh belajar</a></li>
                     <li><a href="/category/sair-jo-pantun.html">sair jo pantun</a></li>
                     <li><a href="/category/tajamahan-carito.html">tajamahan carito</a></li>
+                    <li><a href="/category/tokpisin.html">tokpisin</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
@@ -25,6 +26,7 @@
     <h1>Tags for Baso jo Budi</h1>
     <ul>
         <li><a href="/tag/baso-minang.html">baso minang</a> (5)</li>
+        <li><a href="/tag/tok-pisin.html">tok pisin</a> (1)</li>
     </ul>
 </section>
 
